crates/language-v2/tests/src/fail/p3_references/enabled_too_early/test.stderr
error: Parent scope is only enabled in '2.0.0..3.0.0'.
  --> src/fail/p3_references/enabled_too_early/test.rs:28:79
   |
28 |                     fields = (field_1 = Optional(reference = Three, enabled = From("1.0.0")))
   |                                                                               ^^^^
